Fix the moderation checkbox not being weirdly misaligned on mobile.

--- a/Themes/natural/css/_topiclisting.scss
+++ b/Themes/natural/css/_topiclisting.scss
@@ -419,7 +419,16 @@
 			grid-row-end: 2;
 			text-align: right;
 			width: inherit;
-			margin-right: 20px;
+		}
+	}
+}
+
+@media screen and (max-width: 767px) {
+	.topic-ic {
+		.topic-subject {
+			span span a {
+				display: inline-block;
+			}
 		}
 	}
 }
